--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ ul.W-Info li img {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	transition: opacity 0.65s;
 	pointer-events: none;
 	opacity: 0;
@@ -162,27 +162,20 @@ ul.W-Info li img {
 }
 
 .OverLayer-Mask {
-  position: absolute;
+  position: fixed;
   background: rgba(0, 0, 0, .88);
   width: 100%;
   height: 100%;
 }
 
 .OverLayer-Inner {
-  position: absolute;
+	position: absolute;
+	overflow-y: scroll;
   top: 50%;
   left: 50%;
-  width: 85%;
+	width: 85%;
+	height: 80%;
   transform: translate(-50%, -50%);
-}
-
-.area {
-	width: 100%;
-	position: absolute;
-	transform: translate(-50%, -50%);
-	left: 50%;
-	top: 50%;
-	line-height: 1.7;
 }
 
 .wrapper {
@@ -527,7 +520,6 @@ button:hover{
 /* ----------------- */
 /* レスポンシブ対応 */
 /* ----------------- */
-
 /* 768〜1079px */
 @media screen and (min-width:768px) and (max-width:1079px) {
 
@@ -776,10 +768,8 @@ button:hover{
 	font-weight: 100;
 }
 
-
-
-
 }
+
 
 
 
