--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ a:hover {
 
 header > .title {
 	text-align: center;
-	margin: 100px 0px;
+	padding: 100px 0px;
 }
 
 header > .title h2 {
@@ -94,21 +94,135 @@ header > .title h2 {
 }
 
 
+/* ディスコグラフィ */
+#Discography {
+	width: 100%;
+	padding-top: 30px;
+}
+
+.Disco-wrapper {
+	padding: 50px;
+	background-color: #F7F7F7;
+	border-radius: 10px;
+	font-size: .8rem;
+	line-height: 1.2rem;
+}
+
+.Disco-Inner{
+	width: 80%;
+	display: flex;
+	justify-content: space-between;
+	margin: 0px auto;
+}
+
+.Disco-Inner .mov, .Disco-Inner .movtext {
+	width: 50%;
+	margin: 0px;
+}
+
+.Disco-Inner .movtext .uline {
+	border-bottom: 1px solid #808080;
+	margin: 8px;
+}
+
+.Disco-Inner .movtext-pdg p {
+	margin: 0px;
+}
+
+.Disco-Inner .movtext-pdg2 p {
+	margin: 3px 0px;
+}
+
+.Disco-Inner .movtext-pdg2 .artist {
+	font-size: .8rem;
+	font-weight: bold;
+}
+
+.Disco-Inner .movtext-pdg2 .circle {
+	font-size: 1rem;
+	line-height: 1.3rem;
+	font-weight: bold;
+}
+
+.Disco-Inner .movtext-pdg2 dl {
+	font-size: .8rem;
+	line-height: 1rem;
+	margin: 10px 0px;
+}
+
+.Disco-Inner .movtext .button {
+	display: inline-block;
+	margin: 8px 0px;
+	padding: 6px 12px; 
+	color: #808080;
+	text-decoration: none;
+	text-align: center;
+	border: solid 1px #808080;
+	border-radius: 5px;
+	font-size: 0.7rem;
+	-webkit-transition: all 0.1s;
+	transition: all 0.1s;
+}
+
+.Disco-Inner .movtext .button:hover{
+	background-color: #808080;
+	color: #fff;
+}
+
+.Disco-wrapper .title-Inner-Track {
+	width: 90%;
+	margin: 0px auto;
+	padding-top: 5px;
+	font-weight: bold;
+}
+
+.Disco-wrapper .wrapper {
+	width: 90%;
+	display: flex;
+	justify-content: space-between;
+	padding: 15px 40px;
+	margin: 0px auto;
+	background-color: #fff;
+	border: 1px solid #EAEAEA;
+	border-radius: 10px;
+}
+
+.Disco-wrapper .title-Inner-L, .title-Inner-R {
+	width: 50%;
+}
+
+.Disco-wrapper .title-Inner p {
+	margin: 2px 0px;
+}
+
+.title-note {
+	font-size: .5rem;
+	font-weight: lighter;
+	line-height: .8rem;
+	letter-spacing: 0px;
+	margin: 0px;
+	padding-left: 15px;
+	padding-bottom: 5px;
+}
+
+
+
+
+
 /* 作品一覧 */
 
 .contents {
 	width: 100%;
-	justify-content: space-between;
 	margin-bottom: 30px;
 }
 
-ul.W-Info{
+ul.W-Info {
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	padding: 0px;
-	padding-top: 20px;
+	padding-top: 40px;
 }
 
 ul.W-Info li {
@@ -174,7 +288,7 @@ ul.W-Info li img {
   top: 50%;
   left: 50%;
 	width: 85%;
-	height: 40%;
+	height: 55%;
   transform: translate(-50%, -50%);
 }
 
@@ -210,9 +324,9 @@ ul.W-Info li img {
 	margin-right: 5px;
 }
 
-.movtext {
+.OverLayer-Inner .movtext {
 	width: 35%;
-	margin: 30px 0px;
+	margin: 25px 0px;
 }
 
 .movtext-pdg2 .artist {
@@ -271,11 +385,11 @@ ul.W-Info li img {
 }
 
 .movtext dt {
-	width: 25%;
+	width: 35%;
 }
 
 .movtext dd {
-	width: 75%;
+	width: 65%;
 	margin: 0px;
 }
 
@@ -284,11 +398,16 @@ ul.W-Info li img {
 .Profile {
 	width: 100%;
 	justify-content: center;
-	background-color: #F7F7F7;
 	padding: 50px 0px 60px 0px;
 	font-style: normal;
 	margin: 0px;
 }
+
+.Profile-wrapper {
+	padding: 40px;
+	background-color: #F7F7F7;
+}
+
 .All-Info{
 	display: flex;
 }
@@ -544,24 +663,10 @@ button:hover{
 		margin-bottom: 5px;
 	}
 
-	.wrapper {
-		display: block;
-		padding: 30px;
-	}
 	
 	.menu h2 {
 		font-size: 1.2rem;
 		margin: 0px;
-	}
-
-	.mov {
-		width: 100%;
-		margin: 0px;
-	}
-	
-	.movtext {
-		width: 80%;
-		margin: 30px auto;
 	}
 
 	.movtext .button {
@@ -593,12 +698,18 @@ button:hover{
 
 
 
-/* 767px以下*/
 
+
+/* 767px以下*/
 @media screen and (max-width:767px) {
 
 	#mainWrapper {
 		width: 80%;
+	}
+
+	header > .title {
+		text-align: center;
+		padding: 70px 0px 50px 0px;
 	}
 
 	.menu {
@@ -609,13 +720,80 @@ button:hover{
 	}
 
 	.menu h2 {
-		font-size: 1.3rem;
+		border: 1px solid #808080;
+		border-radius: 10px;
+		font-size: 1.2rem;
 		margin: 0px;
-		padding: 20px 30px;
+		padding: 15px 30px;
 	}
 
 .menu > .hidden {
 		display: none;
+}
+
+.Disco-Inner{
+	width: 90%;
+	display: block;
+	margin: 0px auto;
+}
+
+.Disco-wrapper {
+	padding: 40px 20px;
+	background-color: #F7F7F7;
+	border-radius: 10px;
+	font-size: .8rem;
+	line-height: 1.2rem;
+}
+
+.Disco-Inner .mov, .Disco-Inner .movtext {
+	width: 100%;
+	margin: 0px;
+}
+
+.movtext-pdg, .movtext-pdg2 {
+	padding-left: 10px;
+}
+
+.button-mq {
+	text-align: center;
+}
+
+.Disco-Inner .movtext .button {
+	display: inline-block;
+	margin: 8px auto;
+	padding: 12px 70px; 
+	color: #808080;
+	text-decoration: none;
+	text-align: center;
+	border: solid 1px #808080;
+	border-radius: 5px;
+	font-size: 0.8rem;
+	-webkit-transition: all 0.1s;
+	transition: all 0.1s;
+}
+
+.Disco-wrapper .wrapper {
+	width: 90%;
+	display: block;
+	justify-content: space-between;
+	padding: 20px 0px 20px 30px;
+	margin: 0px auto;
+	background-color: #fff;
+	border: 1px solid #EAEAEA;
+	border-radius: 10px;
+}
+
+.Disco-wrapper .title-Inner-L, .title-Inner-R {
+	width: 100%;
+}
+
+.Disco-wrapper .title-Inner-Track {
+	width: 100%;
+	margin: 10px auto;
+	text-align: center;
+	font-size: 1rem;
+	padding-top: 5px;
+	font-weight: bold;
 }
 
 	ul.W-Info li {
@@ -640,23 +818,41 @@ button:hover{
 		margin: 0px;
 	}
 	
-	.movtext {
+	.OverLayer-Inner {
+		position: absolute;
+		overflow-y: scroll;
+		width: 85%;
+		height: 90vh;
+		transform: translate(-50%, -50%);
+	}
+
+	.OverLayer-Inner .movtext {
 		width: 80%;
 		margin: 30px auto;
 	}
 
-	.movtext .button {
+	.OverLayer-Inner .movtext .button {
 		display: inline-block;
-		padding: 10px 18px; 
-		margin-top: 20px;
+		margin: 8px auto;
+		padding: 10px 70px; 
 		color: #fff;
 		text-decoration: none;
 		text-align: center;
-		border: solid 1px #fff;
+		border: solid 1px #808080;
 		border-radius: 5px;
-		font-size: 1rem;
+		font-size: 0.8rem;
 		-webkit-transition: all 0.1s;
 		transition: all 0.1s;
+	}
+
+	.OverLayer-Inner .movtext .button:hover{
+		background-color: #fff;
+		color:#808080;
+	}
+
+	.Profile-wrapper {
+		padding: 40px 20px;
+		background-color: #F7F7F7;
 	}
 
 	.All-Info{
@@ -713,7 +909,7 @@ button:hover{
 	
 	.v-info dd, .d-info dd {
 		width: 100%;
-		margin: 0px;
+		margin: 0px 0px 5px 0px;
 		padding-left: 15px;
 	}
 
@@ -735,6 +931,12 @@ button:hover{
 	.v-info, .d-info {
 		width: 100%;
 		margin-bottom: 20px;
+	}
+
+	.check {
+		background-color: #EAEAEA;
+		padding: 1px 3px;
+		margin: 0px 5px;
 	}
 
 	#form-name, #form-mail {
